# PSP-HA-GPS

./: .gitignore  PI_analysis.py  README.md  bit_sync.py  code_translate.py  fft_compilation_command.txt  fft_correlator.cpp  fft_correlator_dummy.c  fft_correlator_e1.cpp  fft_correlator_e1_pilot.cpp  fft_correlator_waas.cpp  iq.csv  observables.mat  out.txt  packet2wav_3ch  plot_stuff.py  proc_sdr.py  proc_sdr_pmonta.py  rtl_sdr.py  temp.py  temp.txt  test.csv  test.xlsx  test_prn  vcpkg-init.cmd
GPS_stuff_testing/: GPS_stuff_testing.xpr  testing_behav.wcfg
fft_correlator/: CMakeLists.txt  fft_correlator.cpp
fft_correlator_e1c/: CMakeLists.txt  fft_correlator_e1c.cpp
fpga_c_model/: 50_avg.kml  plotting.py
fpga_c_model/Inc/: channel.h  e1b_channel.h  e1b_ephemeris.h  ephemeris.h  gps.h  logging.h  solve.h  tools.h  waves.h
fpga_c_model/Src/: channel.c  e1b_channel.c  e1b_ephemeris.c  ephemeris.c  fpga_model.c  logging.c  solve.c  tools.c
fpga_c_model/log/: filter-galileo-14.csv  filter-galileo-24.csv  filter-galileo-26.csv  filter-gps-2.csv  filter-gps-21.csv  filter-gps-26.csv  filter-gps-4.csv  filter-gps-5.csv  iq-galileo-14.csv  iq-galileo-24.csv  iq-galileo-26.csv  iq-gps-2.csv  iq-gps-21.csv  iq-gps-26.csv  iq-gps-4.csv  iq-gps-5.csv  power-galileo-14.csv  power-galileo-24.csv  power-galileo-26.csv  power-gps-2.csv  power-gps-21.csv  power-gps-26.csv  power-gps-5.csv  pvt.csv  time-galileo-14.csv  time-galileo-24.csv  time-galileo-26.csv  (+5 more)
fpga_c_model_3bit/: 6_sats.kml  build_command.bat  coords.csv  google_earth_template.kml  plotting.py  tx_time.csv
(+106 files in other folders)
